@@ -66,6 +66,8 @@ o use global variables directory /etc/indimail/control/global_vars for
 - 01/08/2021
 36. svctool: use HOSTNAME variable if set for mrtg service
 37. qupgrade.sh: added case for arch linux
+38. indimail-mta.spec, PKGBUILD, debian pre/post: skip service if dir doesn't
+    exist
 
 * 
 Release 2.13 Start 14/02/2021
